# ai-agent-cli-rules

./: .coverage  .gitignore  1  4  README.md  agent.go  app.go  config_test.go  crashdump_test.go  exitcode.go  exitcode_test.go  flightcontext.go  go.work  pyproject.toml  sandbox.go  signalhandler.go  signalhandler_test.go  signalhandler_unix_test.go  testhelpers_test.go  validate_test.go  writer_test.go
.github/workflows/: publish.yml
.tmp-go-build-cache/: trim.txt
.tmp-go-build-cache/00/: 00d2ca1e0598646c4ba7150733ce7d0460e06f7b311b915b497cef78316f9baf-a  00e18e646f43e86d745f76088aec3efdc593fc8e7ddc87efc8ae0ee32351457c-d
agentsdk/: __init__.py  agent_commands.py  command_meta.py  envelope.py
agentsdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdks/python/: pyproject.toml
sdks/python/agentsdk/: __init__.py  app.py  backup.py  config.py  crashdump.py  envelope.py  exitcode.py  flightcontext.py  health.py  logger.py  restore.py  sandbox.py  signalhandler.py  validate.py  writer.py
sdks/python/agentsdk/testing/: __init__.py
sdks/python/tests/: conftest.py  test_agent_commands.py  test_agent_integration.py  test_app.py  test_backup.py  test_config.py  test_crashdump.py  test_envelope.py  test_exitcode.py  test_flightcontext.py  test_logger.py  test_restore.py  test_sandbox.py  test_signalhandler.py  test_testing.py  test_validate.py  test_writer.py
tests/: test_agent_commands.py  test_agent_integration.py  test_app.py  test_envelope.py  test_exitcode.py  test_health.py
(+1228 files in other folders)
